superlinter.yml changed to whitelist mode

--- a/.github/workflows/superlinter.yml
+++ b/.github/workflows/superlinter.yml
@@ -61,7 +61,7 @@ jobs:
           # MINIMAL ENABLED LINTERS
           # -------------------------
 
-          # Keep essential lightweight validators enabled:
+          # Keep essential lightweight validators enabled: (white list mode)
           VALIDATE_MARKDOWN: true
           VALIDATE_YAML: true
 
@@ -75,58 +75,58 @@ jobs:
           # -------------------------
 
           # Languages
-          VALIDATE_CSHARP: false
-          VALIDATE_CPP: false
-          VALIDATE_C: false
-          VALIDATE_GO: false
-          VALIDATE_JAVA: false
-          VALIDATE_JAVASCRIPT_ES: false
-          VALIDATE_PERL: false
-          VALIDATE_PHP: false
-          VALIDATE_POWERSHELL: false
-          VALIDATE_PYTHON: false
-          VALIDATE_RUBY: false
-          VALIDATE_RUST: false
-          VALIDATE_TYPESCRIPT_ES: false
+          # VALIDATE_CSHARP: true
+          # VALIDATE_CPP: true
+          # VALIDATE_C: true
+          # VALIDATE_GO: true
+          # VALIDATE_JAVA: true
+          # VALIDATE_JAVASCRIPT_ES: true
+          # VALIDATE_PERL: true
+          # VALIDATE_PHP: true
+          # VALIDATE_POWERSHELL: true
+          # VALIDATE_PYTHON: true
+          # VALIDATE_RUBY: true
+          # VALIDATE_RUST: true
+          # VALIDATE_TYPESCRIPT_ES: true
 
           # Shell / Bash-related
-          VALIDATE_BASH: false
-          VALIDATE_BASH_EXEC: false
-          VALIDATE_SHELL_SHFMT: false
-          VALIDATE_EDITORCONFIG: false
+          # VALIDATE_BASH: true
+          # VALIDATE_BASH_EXEC: true
+          # VALIDATE_SHELL_SHFMT: true
+          # VALIDATE_EDITORCONFIG: true
 
           # Infrastructure / Security
-          VALIDATE_CHECKOV: false
-          VALIDATE_TERRAFORM_TFLINT: false
-          VALIDATE_TERRAFORM_VALIDATE: false
-          VALIDATE_GITLEAKS: false
-          VALIDATE_TRIVY: false
+          # VALIDATE_CHECKOV: true
+          # VALIDATE_TERRAFORM_TFLINT: true
+          # VALIDATE_TERRAFORM_VALIDATE: true
+          # VALIDATE_GITLEAKS: true
+          # VALIDATE_TRIVY: true
 
           # Web-related
-          VALIDATE_HTML: false
-          VALIDATE_HTML_PRETTIER: false
-          VALIDATE_CSS: false
-          VALIDATE_JAVASCRIPT_PRETTIER: false
-          VALIDATE_JSON_PRETTIER: false
-          VALIDATE_YAML_PRETTIER: false
+          # VALIDATE_HTML: true
+          # VALIDATE_HTML_PRETTIER: true
+          # VALIDATE_CSS: true
+          # VALIDATE_JAVASCRIPT_PRETTIER: true
+          # VALIDATE_JSON_PRETTIER: true
+          # VALIDATE_YAML_PRETTIER: true
 
           # CI/CD / GitHub stuff
-          VALIDATE_GITHUB_ACTIONS: false
-          VALIDATE_GITHUB_ACTIONS_ZIZMOR: false
+          # VALIDATE_GITHUB_ACTIONS: true
+          # VALIDATE_GITHUB_ACTIONS_ZIZMOR: true
 
           # Documentation / prose
-          VALIDATE_MARKDOWN_PRETTIER: false
-          VALIDATE_NATURAL_LANGUAGE: false
+          # VALIDATE_MARKDOWN_PRETTIER: true
+          # VALIDATE_NATURAL_LANGUAGE: true
 
           # Miscellaneous
-          VALIDATE_XML: false
-          VALIDATE_SQL: false
-          VALIDATE_DOCKERFILE: false
-          VALIDATE_JSCPD: false
-          VALIDATE_BIOME_LINT: false
-          VALIDATE_BIOME_FORMAT: false
-          VALIDATE_GO_MODULES: false
-          VALIDATE_GO_RELEASER: false
-          VALIDATE_PRE_COMMIT: false
+          # VALIDATE_XML: true
+          # VALIDATE_SQL: true
+          # VALIDATE_DOCKERFILE: true
+          # VALIDATE_JSCPD: true
+          # VALIDATE_BIOME_LINT: true
+          # VALIDATE_BIOME_FORMAT: true
+          # VALIDATE_GO_MODULES: true
+          # VALIDATE_GO_RELEASER: true
+          # VALIDATE_PRE_COMMIT: true
 
           # Add any future validators here by following the same pattern.
