--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -10,20 +10,24 @@ on:
   workflow_dispatch:
 
 jobs:
-
   job1:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
+
     - uses: shogo82148/actions-goveralls@v1
       with:
         # path-to-profile: coverage.out
         github-token: ${{ secrets.GITHUB_TOKEN }}
 
     - name: Set up Go
-      uses: actions/setup-go@v2
+      uses: actions/setup-go@v5
       with:
-        go-version: 1.16.x
+        go-version: '1.24.0'
+        check-latest: true
+
+    - name: Show Go version
+      run: go version
 
     # Disabled due to https://github.com/golang/go/issues/41205#issuecomment-692862157
     # - name: Check
@@ -34,4 +38,3 @@ jobs:
 
     - name: Build
       run: go build -v ./...
-
