--- a/.github/workflows/superlinter.yml
+++ b/.github/workflows/superlinter.yml
@@ -35,6 +35,7 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           DEFAULT_BRANCH: main
+          LOG_LEVEL: DEBUG
 
           # ───────────────────────────────────────────────────────────────
           # GLOBAL SETTINGS
