--- a/.github/workflows/superlinter.yml
+++ b/.github/workflows/superlinter.yml
@@ -37,6 +37,7 @@ jobs:
           DEFAULT_BRANCH: main
           # LOG_LEVEL: DEBUG
           LINTER_RULES_PATH: .
+          MARKDOWN_CONFIG_FILE: .markdownlint.yaml
 
           # ───────────────────────────────────────────────────────────────
           # GLOBAL SETTINGS
