Disable Jekyll build step in pages.yml
Comment out Jekyll build step in GitHub Actions workflow

--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -66,11 +66,11 @@ jobs:
       - name: Setup Pages
         uses: actions/configure-pages@v5
 
-      - name: Build with Jekyll
-        uses: actions/jekyll-build-pages@v1
-        with:
-          source: ./docs
-          destination: ./_site
+      #- name: Build with Jekyll
+      #  uses: actions/jekyll-build-pages@v1
+      #  with:
+      #    source: ./docs
+      #    destination: ./_site
 
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
